// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWorkspace.vue Should display a warning if browser is Safari 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i></span>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <form novalidate="novalidate" class="v-form">
      <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceServer" class="v-label theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-85" class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-select__slot"><label for="input-85" class="v-label theme--light" style="left: 0px; position: absolute;">Chain</label>
              <div class="v-select__selections"><input required="required" id="input-85" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="ethereum">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class="v-card__actions">
        <div class="spacer"></div> <button type="submit" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display a warning message if user has already been onboarded & on a free plan 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark error--text"></i>
        <div class="v-alert__content">Free plan users are limited to one workspace. <a href="#">Upgrade</a> to our Premium plan to create more.</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display an error if it cannot connect to the chain 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="">
      Can't connect to rpc server,
      make sure your node is up, and reachable from the browser.<br>
      If you are using Brave, you'll need to disable Shields.
      Try disabling adblockers as well.<br>
      Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>, and use https to connect.
    </div>
    <div class="mb-2">
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <form novalidate="novalidate" class="v-form">
      <div class="v-input mb-2 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input mb-2 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-62" class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-select__slot"><label for="input-62" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Chain</label>
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">Ethereum</div><input required="required" id="input-62" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="ethereum">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class="v-card__actions">
        <div class="spacer"></div> <button type="submit" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" id="createWorkspace"><span class="v-btn__content">Create</span></button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display locally running networks 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="">
        <li>
          http://127.0.0.1:8545&nbsp;<a href="#" id="serverDetected-0">Use</a></li>
      </ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <form novalidate="novalidate" class="v-form">
      <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input mb-2 v-input--has-state v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light error--text" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                <div class="v-messages__message">RPC needs to be a valid URL</div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-103" class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-select__slot"><label for="input-103" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Chain</label>
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">Ethereum</div><input required="required" id="input-103" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="ethereum">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class="v-card__actions">
        <div class="spacer"></div> <button type="submit" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should not display a warning message if user has already been onboarded & on a premium plan 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i></span>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <form novalidate="novalidate" class="v-form">
      <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="workspaceServer" class="v-label theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
          </div>
        </div>
      </div>
      <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-21" class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-select__slot"><label for="input-21" class="v-label theme--light" style="left: 0px; position: absolute;">Chain</label>
              <div class="v-select__selections"><input required="required" id="input-21" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="ethereum">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class="v-card__actions">
        <div class="spacer"></div> <button type="submit" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
      </div>
    </form>
  </div>
</div>
`;
